	* win/tclWinFile.c: fixed up further so both compiles and
	actually works with VC++ 5 or 6.
	* win/tclWinInt.h: 
	* win/tclWin32Dll.c: cleaned up code and vfs tests and
	added tests for the internal changes of 2002-06-12, to see
	whether WinTcl on NTFS can coexist peacefully with links
	in the filesystem.  Added new test command 'testfilelink'
	to enable the newer code to be tested.

2002-06-12  Miguel Sofer  <msofer@users.sourceforge.net>

	* tclBasic.c (Tcl_DeleteTrace): fixed [Bug 568123] (thanks to
	Hemang Lavana)
	
2002-06-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclWinFile.c: corrected the symbolic link handling code to
	allow it to compile.  Added real definition of REPARSE_DATA_BUFFER
	(found in winnt.h).  Most of the added definitions appear to have
	correct, cross-Win-version equivalents in winnt.h and should be
	removed, but just making things "work" for now.

2002-06-12  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclIOUtil.c:
	* generic/tcl.decls:
	* generic/tclDecls.h: made code for Tcl_FSNewNativePath
	agree with man pages.
	
	* doc/FileSystem.3: clarified the circumstances under which
	certain functions are called in the presence of symlinks.
	
	* win/tclWinFile.c:
	* win/tclWinPort.h: 
	* win/tclWinInt.h: 
	* win/tclWinFCmd.c:  Fix for Windows to allow 'file lstat', 
	'file type', 'glob -type l', 'file copy', 'file delete', 
	'file normalize', and all VFS code to work correctly in the 
	presence of symlinks (previously Tcl's behaviour was not very 
	well defined).  This also fixes possible serious problems in 
	all versions of WinTcl where 'file delete' on a NTFS symlink 
	could delete the original, not the symlink.
	Note: symlinks cannot yet be created in pure Tcl.

2002-06-11  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclBasic.c: 
	* generic/tclCompCmds.c:
	* generic/tclInt.h: reverted the new compilation functions;
	replaced by a more general approach described below.

	* generic/tclCompCmds.c: