@@ -2201,42 +2201,42 @@ makeDirectory abc2.dir
 makeFile contents abc.file
 makeFile contents abc2.file
 
-test fCmd-28.3 {testfilelink} {linkDirectory} {
+test fCmd-28.3 {testfilelink} {linkDirectory winOnly} {
     list [catch {testfilelink abc.dir abc2.dir} msg] $msg
 } {1 {could not create link from "abc.dir" to "abc2.dir": file already exists}}
 
-test fCmd-28.4 {testfilelink} {linkFile} {
+test fCmd-28.4 {testfilelink} {linkFile winOnly} {
     list [catch {testfilelink abc.file abc2.file} msg] $msg
 } {1 {could not create link from "abc.file" to "abc2.file": file already exists}}
 
-test fCmd-28.5 {testfilelink} {linkFile} {
+test fCmd-28.5 {testfilelink} {linkFile winOnly} {
     file delete -force abc.link
     list [catch {testfilelink abc.link abc.file} msg] $msg
 } {0 abc.file}
 
 catch {file delete -force abc.link}
 
-test fCmd-28.6 {testfilelink} {linkDirectory} {
+test fCmd-28.6 {testfilelink} {linkDirectory winOnly} {
     file delete -force abc.link
     list [catch {testfilelink abc.link abc2.doesnt} msg] $msg
 } {1 {could not create link from "abc.link" to "abc2.doesnt": no such file or directory}}
 
-test fCmd-28.7 {testfilelink} {linkDirectory} {
+test fCmd-28.7 {testfilelink} {linkDirectory winOnly} {
     file delete -force abc.link
     list [catch {testfilelink abc.link abc.dir} msg] $msg
 } {0 abc.dir}
 
-test fCmd-28.7.1 {testfilelink} {linkDirectory} {
+test fCmd-28.7.1 {testfilelink} {linkDirectory winOnly} {
     # duplicate link throws error
     list [catch {testfilelink abc.link abc.dir} msg] $msg
 } {1 {could not create link from "abc.link" to "abc.dir": file already exists}}
 
-test fCmd-28.8 {testfilelink: deletes link not dir} {linkDirectory} {
+test fCmd-28.8 {testfilelink: deletes link not dir} {linkDirectory winOnly} {
     file delete -force abc.link
     list [file exists abc.link] [file exists abc.dir]
 } {0 1}
 
-test fCmd-28.9 {testfilelink: copies link not dir} {linkDirectory} {
+test fCmd-28.9 {testfilelink: copies link not dir} {linkDirectory winOnly} {
     file delete -force abc.link
     testfilelink abc.link abc.dir
     file copy abc.link abc2.link
@@ -2249,17 +2249,17 @@ file delete -force abc2.link
 file copy abc.file abc.dir
 file copy abc2.file abc.dir
 
-test fCmd-28.10 {testfilelink: glob inside link} {linkDirectory} {
+test fCmd-28.10 {testfilelink: glob inside link} {linkDirectory winOnly} {
     file delete -force abc.link
     testfilelink abc.link abc.dir
     glob -dir abc.link -tails *
 } {abc.file abc2.file}
 
-test fCmd-28.11 {testfilelink: glob -type l} {linkDirectory} {
+test fCmd-28.11 {testfilelink: glob -type l} {linkDirectory winOnly} {
     glob -dir [pwd] -type l -tails abc*
 } {abc.link}
 
-test fCmd-28.12 {testfilelink: glob -type d} {linkDirectory} {
+test fCmd-28.12 {testfilelink: glob -type d} {linkDirectory winOnly} {
     lsort [glob -dir [pwd] -type d -tails abc*]
 } [lsort [list abc.link abc.dir abc2.dir]]
 
